# merge_train

./: .gitignore  CHANGELOG.md  README.md  file_domains.yaml  install.sh  pyproject.toml  schedule_branch_work.sh
.cursor/: hooks.json
.github/workflows/: evidence-guard.yml  hermes-pr-tag-listener.yml  release-on-merge.yml  tests.yml
docs/: AGENTS.md  CLAUDE.md  acquire_files_spec.md  ao-live-deployment.md  e2e_area_lock_proof.md  opencode_md_area_lock_e2e.md
evidence/v0.2/: EVIDENCE.md  metadata.json  metadata.json.sha256
evidence/v0.2.2/: EVIDENCE.md
evidence/v0.2/artifacts/: file_domains_v1.yaml  file_domains_v1.yaml.sha256  file_domains_v2.yaml  file_domains_v2.yaml.sha256  prs.yaml  prs.yaml.sha256  result_v1.json  result_v1.json.sha256  result_v2.json  result_v2.json.sha256
evidence/v0.2/reviews/: codex_v0_2.md  evidence_reviewer_v0_2.md
evidence/v0.3/: README.md  README.md.sha256  active_during_run.json  active_during_run.json.sha256  branches.txt  branches.txt.sha256  checksums.txt  checksums.txt.sha256  evidence.md  evidence.md.sha256  lock_log.jsonl  lock_log.jsonl.sha256  metadata.json  metadata.json.sha256  methodology.md  methodology.md.sha256  pairwise_merge_tree.json  pairwise_merge_tree.json.sha256  prs.json  prs.json.sha256  prs.txt  prs.txt.sha256  run.json  run.json.sha256  sequential_merge_tree.json  sequential_merge_tree.json.sha256
evidence/v0.3/agent_transcripts/: slot-01.log.sha256  slot-02.log.sha256  slot-03.log.sha256  slot-04.log.sha256  (+16 more)
evidence/v0.4/: README.md  README.md.sha256  active_after_release.json.sha256  active_during_run.json  active_during_run.json.sha256  branches.txt  branches.txt.sha256  checksums.txt  checksums.txt.sha256  evidence.md  evidence.md.sha256  lock_log.jsonl  lock_log.jsonl.sha256  metadata.json  metadata.json.sha256  methodology.md  methodology.md.sha256  pairwise_merge_tree.json  pairwise_merge_tree.json.sha256  prs.json  prs.json.sha256  prs.txt  prs.txt.sha256  run.json  run.json.sha256  sequential_merge_tree.json  sequential_merge_tree.json.sha256
evidence/v0.4-ao/: checksums.txt  checksums.txt.sha256  lock_log.jsonl  lock_log.jsonl.sha256  metadata.json  metadata.json.sha256  prs.json  prs.json.sha256  run.json  run.json.sha256
evidence/v0.5-ao/: checksums.txt  checksums.txt.sha256  lock_log.jsonl  lock_log.jsonl.sha256  metadata.json  metadata.json.sha256  prs.json  prs.json.sha256  run.json  run.json.sha256
evidence/v0.6-ao/: checksums.txt  checksums.txt.sha256  evidence.md  evidence.md.sha256  lock_log.jsonl  lock_log.jsonl.sha256  metadata.json  metadata.json.sha256  prs.json  prs.json.sha256  run.json  run.json.sha256  v0.6_verify.cast  v0.6_verify.cast.sha256  v0.6_verify.gif.sha256  v0.6_verify.mp4.sha256
examples/: file_domains.yaml
hooks/: ao-spawn-domain-check.sh  domain-lock-pre-tool.sh  domain-lock-session-start.sh  domain-lock-session-stop.sh  e2e_slot_worker.sh  gemini-conflict-warn.sh  gemini-domain-lock-guard.sh  pre-commit.sh  predict-spawn-check.sh
merge_train/: __init__.py  __main__.py  acquire.py  config.py  domain_lock.py  domain_recommender.py  hook_install.py  lang_extractors.py  predict.py  symbol_discovery.py  symbols.py
merge_train/hooks/: conflict-warn-pre-tool.sh  conflict_check_helper.py  e2e_slot_worker.sh  gemini-conflict-warn.sh  opencode-conflict-plugin.js  pre-commit.sh  predict-spawn-check.sh  wire_hook_config.py
roadmap/: README.md  one_big_pr_plan.md
scripts/: e2e_ao_orchestrated_runner.py  e2e_md_area_lock_runner.py  e2e_pairwise_merge_tree.py  e2e_sequential_merge_tree.py  refresh_evidence.sh
tests/: __init__.py  test_acquire.py  test_acquire_files.py  test_branch_locks.py  test_check_report.py  test_concurrency_locks.py  test_config.py  test_conflict_helper.py  test_conflict_override.py  test_domain_lock.py  test_domain_recommender.py  test_e2e_md_area_lock_runner.py  test_evidence_bundle.py  test_fanout_hooks_tmux.sh  test_hook_install.py  test_hook_script_logging.py  test_intra_pr_locks.py  test_lang_extractors.py  test_long_running_reliability.py  test_merge_queue_stress.py  test_mixed_workload.py  test_predict.py  test_reserve_plan.py  test_semantic_adversarial.py  test_semaphore_locks.py  test_symbol_locks.py  test_symbols.py
tests/fixtures/: sample.cpp  sample.cs  sample.go  sample.java  sample.rs  sample.ts
(+25 files in other folders)
