[project]
name = "merge_train"
version = "0.1.0"
description = "Spawn-time file-domain lock registry for AI-agent PR pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
domain_lock = "merge_train.domain_lock:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["merge_train*"]
